Refactor methods