@@ -61,13 +61,13 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/src/main/resources/lib/wlthint3client.jar</systemPath>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.telefonica</groupId>
 			<artifactId>events-schemas</artifactId>
 			<version>1.0</version>
 			<scope>system</scope>
 			<systemPath>${basedir}/src/main/resources/lib/events-schemas-1.0.jar</systemPath>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
@@ -92,6 +92,14 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
                 	<jvmArguments>--add-opens java.base/java.io=ALL-UNNAMED</jvmArguments>
+				</configuration>
+			</plugin>
+			 <!-- Maven Surefire Plugin for running tests -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
